# SpeedTheSpire

./: .clang-format  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  InitialPlan.md  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_advance.cpp  bench_smoke.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docs/: stage-a-design.md  stage-a-tasks.md  stage-b-design.md  stage-b-orchestrator-prompt.md  stage-b-tasks.md
include/sts/engine/: action_queue.hpp  advance.hpp  card_play.hpp  card_pools.hpp  cards.hpp  combat_state.hpp  encounters.hpp  interp.hpp  map_gen.hpp  map_rooms.hpp  monster_cultist.hpp  monster_dispatch.hpp  monster_jaw_worm.hpp  monster_louse.hpp  monster_slime.hpp  monster_slime_boss.hpp  monster_slime_large.hpp  observation.hpp  piles.hpp  potions.hpp  power_hooks.hpp  powers.hpp  relic_hooks.hpp  relic_pools.hpp  relics.hpp  rng_jdk.hpp  rng_stream.hpp  rng_xs128.hpp  run_advance.hpp  run_deck.hpp  run_state.hpp  schema.hpp  seed_string.hpp  state_hash.hpp  types.hpp  version.hpp
registry/: README.md  a20.yaml  cards.yaml  encounters.yaml  events.yaml  monsters.yaml  potions.yaml  powers.yaml  relics.yaml
src/engine/: CMakeLists.txt  action_queue.cpp  advance.cpp  card_play.cpp  encounters.cpp  interp.cpp  monster_cultist.cpp  monster_dispatch.cpp  monster_jaw_worm.cpp  monster_louse.cpp  monster_slime.cpp  monster_slime_boss.cpp  monster_slime_large.cpp  piles.cpp  potions.cpp  power_hooks.cpp  relic_hooks.cpp  relic_pools.cpp  run_advance.cpp  state_hash.cpp  version.cpp
tests/: CMakeLists.txt  action_queue_test.cpp  advance_test.cpp  card_attacks_test.cpp  card_ext_test.cpp  card_skills_test.cpp  card_uncommon_attacks_test.cpp  card_uncommon_powers_test.cpp  card_uncommon_skills_test.cpp  cards_test.cpp  cultist_test.cpp  damage_pipeline_test.cpp  differ_test.cpp  encounters_test.cpp  fixture_oracle_test.cpp  jaw_worm_test.cpp  large_slime_test.cpp  louse_test.cpp  map_gen_test.cpp  map_rooms_test.cpp  observation_test.cpp  oracle_adapter_test.cpp  piles_test.cpp  potions_test.cpp  power_hooks_test.cpp  registry_gen_standalone.cpp  registry_gen_test.cpp  relic_hooks_test.cpp  relic_pools_test.cpp  rng_jdk_test.cpp  rng_stream_test.cpp  rng_xs128_test.cpp  run_advance_test.cpp  seed_string_test.cpp  slime_boss_test.cpp  slime_test.cpp  state_test.cpp  status_curse_test.cpp  test_smoke.cpp  translator_test.cpp  (+1 more)
tests/fixtures/: cultist_fixture.tsv  gen_cultist_fixture.py  gen_jaw_worm_fixture.py  gen_louse_fixture.py  gen_slime_fixture.py  jaw_worm_fixture.tsv  louse_defensive_fixture.tsv  louse_normal_fixture.tsv  slime_acid_large_fixture.tsv  slime_acid_medium_fixture.tsv  slime_acid_small_fixture.tsv  slime_spike_large_fixture.tsv  slime_spike_medium_fixture.tsv  slime_spike_small_fixture.tsv
tests/golden/: seed_battery.txt  seedhelper.txt
tests/golden/combat_fixtures/: derivation_notes.md  fixt01_r0_strike.trace  fixt02_r0_defend.trace  fixt03_r2_pommel.trace  fixt04_r7_shrug.trace  fixt05_r5_bash_vuln.trace  fixt06_r3_shrug_pommel.trace  fixt07_r13_bash_strike.trace  fixt08_r19_block_two_turns.trace  fixt09_r6_bash_pommel_vuln.trace  fixt10_r8_block_stack.trace  fixt11_r10_draws.trace  fixt12_r15_bash_pommel.trace  fixt13_r21_triple.trace  fixt14_r23_pommel_strikes.trace  fixt15_r30_mixed_two_turns.trace  fixt16_r29_monster_death.trace  fixt17_r4_player_death.trace  fixt18_r0_reshuffle_overlap.trace  fixt19_r9_long_block.trace  fixt20_r18_bash_two_turns.trace
tests/golden/map_paths/: oracle_maps.txt
tests/golden/oracle_corpus/: skeleton_sample.jsonl
tools/diff_harness/: CMakeLists.txt  README.md
tools/diff_harness/include/sts/diff/: diff_harness.hpp  differ.hpp  oracle.hpp  replay.hpp  reproducer.hpp  trace.hpp
tools/diff_harness/src/: differ.cpp  oracle.cpp  replay.cpp  reproducer.cpp  trace.cpp
tools/fixture_gen/: CMakeLists.txt  gen_combat_fixtures.cpp
tools/golden_capture/: README.md  regen.ps1
tools/golden_capture/src/: GoldenCapture.java
tools/oracle_bridge/: PROTOCOL.md  README.md  build_fork.ps1
tools/oracle_bridge/communicationmod-oracle/: README-oracle.md
tools/oracle_bridge/communicationmod-oracle/src/main/java/communicationmod/: CommunicationMod.java  GameStateConverter.java  GameStateListener.java
tools/oracle_bridge/communicationmod-oracle/src/main/java/communicationmod/patches/: StripAnimationCollapsePatch.java  StripDrawSuppressionPatch.java  StripFastCadencePatch.java
tools/oracle_bridge/communicationmod-oracle/src/main/resources/: ModTheSpire.json
tools/oracle_bridge/driver/: README.md  campaign_driver.py  compare_ab.py  echo_driver.py  extract_scripts.py  measure_throughput.py  orchestrator.py  validate_artifacts.py
tools/oracle_bridge/translator/: CMakeLists.txt
tools/oracle_bridge/translator/include/sts/translate/: translate.hpp
tools/oracle_bridge/translator/src/: main.cpp  oracle_gate_check.cpp  translate.cpp
tools/registry_gen/: CMakeLists.txt  gen.py
